# Lexi

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml  release.yaml
src/: app.rs  lib.rs  main.rs  search.rs
tests/: logging_tests.rs  search_tests.rs
