[package]
name = "lexi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4.44"
eframe = "0.34"
egui = "0.34"
egui_extras = "0.34"
grep = "0.4"
ignore = "0.4"
image = "0.25.10"
open = "5.3"
regex = "1.12"
rfd = "0.17"
quoted_printable = "0.5"

[dev-dependencies]
tempfile = "3.10"

[build-dependencies]
winresource = "0.1.31"
